added proper typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
-    "lib": ["es2018", "dom"]
-  }
+    "target": "es6",
+    "lib": ["es2018", "dom"],
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "./",
+    "emitDeclarationOnly": true,
+    "moduleResolution": "node"
+  },
+  "include": ["./src/**/*"],
+  "exclude": []
 }
