--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "photon-lib-js",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "JavaScript library that powers JavaScript frontend of Photon",
   "source": "src/photon-lib-js.ts",
   "main": "photon-lib-js.js",
-  "types": "types.d.ts",
   "type": "module",
   "scripts": {
-    "watch": "parcel watch",
-    "build": "parcel build",
+    "watch": "concurrently \"parcel watch\" \"tsc --watch\"",
+    "build": "concurrently \"parcel build\" \"tsc\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +28,7 @@
   "devDependencies": {
     "@parcel/packager-ts": "^2.7.0",
     "@parcel/transformer-typescript-types": "^2.7.0",
+    "concurrently": "^7.5.0",
     "parcel": "^2.7.0",
     "typescript": "^4.8.4"
   }
